--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ header{
   border-radius: 50%;
   border-width: 4px;
   border-style: solid;
-  border-color: tomato;
+  border-color: white;
 }
 
 .info {
@@ -40,10 +40,6 @@ header{
   padding: 0px;
   list-style-type: none;
   display: flex;
-}
-
-.info ul li {
-  margin-right: 8px;
 }
 
 .contents {
@@ -73,6 +69,11 @@ header{
 .music {
   margin-top: 60px;
   margin-bottom: 60px;
+}
+
+.music > ul > li{
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .music > ul > li > p {
