--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ header{
   border-radius: 50%;
   border-width: 4px;
   border-style: solid;
-  border-color: white;
+  border-color: #6091d3;
 }
 
 .info {
